Fixed width issues width header links and resume section headers overlapping

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -18,6 +18,7 @@
 
 .headerRight {
   width: 20%;
+  min-width: 200px;
   padding-right: 50px;
   display: flex;
   justify-content: space-around;
