--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -14,3 +14,11 @@
   flex-direction: row;
   justify-content: space-between;
 }
+
+@media only screen and (max-width: 900px) {
+  .educationHeader,
+  .experienceHeader,
+  .extracurricularsHeader {
+    flex-direction: column;
+  }
+}
